[gd_scene load_steps=13 format=3 uid="uid://cotceboux3lsc"]

[ext_resource type="Script" path="res://App/Scenes/Entities/Projectiles/BaseProjectile.gd" id="1_o31g5"]
[ext_resource type="Texture2D" uid="uid://dvbqqyj5slckj" path="res://Assets/Images/Projectiles/Sand_Flag.png" id="3_1c58e"]
[ext_resource type="AudioStream" uid="uid://bbwmmej2tiaa5" path="res://Assets/SFX/thud.wav" id="3_uca5a"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vspf4"]
radius = 128.0

[sub_resource type="Animation" id="Animation_fu0cg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TackProjectileBust:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Audio/AudioStreamPlayer2D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_n5pkk"]
resource_name = "explode"

[sub_resource type="Animation" id="Animation_ahj7m"]
resource_name = "spawn"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TackProjectileBust:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Audio/AudioStreamPlayer2D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_twetv"]
_data = {
"RESET": SubResource("Animation_fu0cg"),
"explode": SubResource("Animation_n5pkk"),
"spawn": SubResource("Animation_ahj7m")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_7kcj6"]
random_pitch = 1.1
random_volume_offset_db = 3.0
streams_count = 1
stream_0/stream = ExtResource("3_uca5a")
stream_0/weight = 1.0

[sub_resource type="Curve" id="Curve_ltfi2"]
_data = [Vector2(0, 0.48136), 0.0, 2.55359, 0, 0, Vector2(0.5, 1), 0.0263103, 0.0263103, 0, 0, Vector2(1, 0.468607), -2.07445, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_yrlfb"]
curve = SubResource("Curve_ltfi2")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_i8vwn"]
particle_flag_align_y = true
particle_flag_disable_z = true
angle_max = 360.0
spread = 180.0
initial_velocity_min = 200.0
initial_velocity_max = 200.0
gravity = Vector3(0, 98, 0)
scale_min = 0.1
scale_max = 0.1
scale_curve = SubResource("CurveTexture_yrlfb")

[node name="MeleeAoEAttack" type="Area2D"]
script = ExtResource("1_o31g5")
speed = 2.08165e-12
damage = 20
duration_in_ticks = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(220, -701)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vspf4")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_twetv")
}

[node name="Audio" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Audio"]
stream = SubResource("AudioStreamRandomizer_7kcj6")
volume_db = -5.0

[node name="TackProjectileBust" type="GPUParticles2D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_i8vwn")
texture = ExtResource("3_1c58e")
lifetime = 0.6
one_shot = true
explosiveness = 0.95

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
